<resources>
    <string name="app_name">Parties</string>
    <string name="name">Parties info</string>
    <string name="selectAnyMember">Select any party\'s member you want to get details from:</string>
    <string name="selectAnyParty">Click on the party\'s image you wish to get members from (fill DB if list is empty):</string>
    <string name="about">This is the test Android-app.
\n\nHere it\'s been implemented a navigation.
\n\nMoreover, here you can go through several Fragments.
\nHere and after just a text-placeholder to demonstrate Scroll-view.
\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
\neiusmod tempor incididunt ut labore et dolore magna aliqua.
\nTurpis egestas maecenas pharetra convallis posuere morbi leo urna molestie.
\nFacilisis gravida neque convallis a cras semper. Ante metus dictum at
\ntempor commodo ullamcorper a. Pellentesque pulvinar pellentesque habitant morbi
\ntristique senectus. Nunc sed id semper risus in hendrerit gravida rutrum. Aliquet
\nsagittis id consectetur purus ut faucibus pulvinar elementum integer. Sit amet
\nfacilisis magna etiam tempor orci eu lobortis. Dictum non consectetur a erat nam at lectus.
\n\nA condimentum vitae sapien pellentesque habitant morbi. Aliquet lectus proin nibh
\nnisl condimentum id venenatis a. Aliquam eleifend mi in nulla posuere sollicitudin.\n\n</string>
    <string name="menu_item_about">About app</string>
    <string name="menu_item_db">Fill DB with data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fillDb">Fill DB or clean it here</string>
    <string name="cleanDb">Clean db</string>

    <!-- contentDescription strings for rating icons -->
    <string name="quality_1">Member Rating 1</string>
    <string name="quality_2">Member Rating 2</string>
    <string name="quality_3">Member Rating 3</string>

    <string name="what_rating">Give your rate</string>
    <string name="note_hint">Write your note here</string>

    <string name="logo_party">logo of party</string>
    <string name="image_member">image of member</string>
    <string name="image_title">title image</string>

    <!--Buttons-->
    <string name="fillFromFileBtn">fill from file</string>
    <string name="fillFromNetBtn">fill from api</string>
    <string name="startBtn">start</string>
    <string name="backBtn">back</string>
    <string name="homeBtn">home</string>
    <string name="saveNoteBtn">save note</string>

</resources>